<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <include layout="@layout/toolbar" />

    <include
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar" />


    <ImageView
        android:id="@+id/otp_govt_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/samagra_name_logo" />


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/please_enter_the_otp_sent_to_the_mobile_number_of_school_incharge"
        android:textColor="@color/appBlue"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/otp_govt_logo"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/appBlue"
        app:counterEnabled="true"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:counterMaxLength="4"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/otp"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/appBlue" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/appBlue"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/otp_text"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:textColor="@color/appBlue" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_text"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        android:layout_marginEnd="16dp"
        android:textColor="@color/appBlue"
        android:minHeight="48dp"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/appBlue" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/password_submit"
        style="@style/LoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_text"
        android:layout_marginEnd="16dp" />


    <TextView
        android:id="@+id/countdown_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/seconds_remaining"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/password_submit"
        android:layout_marginEnd="16dp"
        android:textColor="@color/appBlue"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="573dp" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp">

    </ProgressBar>


</androidx.constraintlayout.widget.ConstraintLayout>