...
    <string name="pending">Pending</string>
    <string name="failed">Failed</string>
    <string name="base_url_relay_server">http://142.93.208.135:8080</string>
    <string name="offline_text_1">It seems you are offline. Logout cannot happen in offline conditions.</string>
    <string name="logging_out">Logging you out...</string>
    <string name="forms_downloading">Forms are downloading, please wait..</string>
    <string name="student_address_book">Parent\'s Mobile \nNumbers</string>
    <string name="send_sms">Send \nSMS</string>
    <string name="no_student">There are no student in the list. Please add students in the Student Address Book</string>
    <string name="data_still_downloading">Data is still downloading, please wait</string>
    <string name="setting_up_credentials">Setting up credentials on the forms</string>
    <string name="no_internet_2">Failed to fetch data. Please check internet</string>
    <string name="helpline">HelpLine</string>
    <string name="successfully_loaded_settings">Successfully loaded settings</string>
...
