...
    <string name="phone_number">Phone Number</string>
    <string name="less_than_8_pass" tools:ignore="MissingTranslation">Password cannot be less than 8 characters</string>
    <string name="pass_cannot_be_empty" tools:ignore="MissingTranslation">Password cannot be empty</string>
    <string name="invalid_phone_number" tools:ignore="MissingTranslation">Please check the entered mobile number.</string>
    <string name="please_enter_the_otp_sent_to_the_mobile_number_of_school_incharge" tools:ignore="MissingTranslation">Please enter the OTP sent to the associated mobile number.</string>
    <string name="otp"> OTP </string>
    <string name="internet_not_connected">It seems you are not connected to the internet. Please switch on your mobile data to change password.</string>

    <string name="pass_changed_redirecting">The password has been successfully changed. Redirecting you to profile page</string>
    <string name="pass_change_successful">The password has been successfully changed. You need to login again to continue. Redirecting you to login page</string>
    <string name="error_in_change_pass">The server responded with an error. Please retry again</string>
    <string name="error_sending_otp">Error sending OTP. Please contact admin</string>
    <string name="pass_did_not_match">Passwords didn\'t match.</string>
...
